2009-09-08  Andrés Gómez  <agomez@igalia.com>

	* ext/gst-camerabin/data/gdigicam-camerabin.conf: Modified audio
	bitrate and sample rate.
	* ext/gst-camerabin/gdigicam-camerabin.c
	(g_digicam_camerabin_element_new): Modified audio bitrate and
	sample rate.

2009-09-07  Andrés Gómez  <agomez@igalia.com>

	* ext/gst-camerabin/gdigicam-camerabin.c:
	(_g_digicam_camerabin_handle_bus_message): Process only camerabin
	state changed messages and not the internal element ones. Fixed
	memory leaks.
	(_g_digicam_camerabin_handle_sync_bus_message): Process messages
	depending if they come from camerabin or not.
	Fixes: NB#108662.

2009-09-04  Andrés Gómez  <agomez@igalia.com>

	* doc/reference/gdigicam-docs.sgml:
	* doc/reference/gst-camerabin/gdigicam-gst-camerabin-docs.sgml:
	* ext/gst-camerabin/gdigicam-camerabin.c:
	* ext/gst-camerabin/gdigicam-camerabin.h:
	* src/gdigicam-error.c:
	GTK-Doc completed.
